// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:tokenize > default constructs > should tokenize empty file 1`] = `
tokens[2]
	├─0 sof (1:1-1:1)
	├─1 eof (1:1-1:1)
`;

exports[`integration:tokenize > default constructs > should tokenize non-empty file 1`] = `
tokens[2]
	├─0 sof (1:1-1:1)
	├─1 eof (22:1-22:1)
`;

exports[`integration:tokenize > user constructs > non-empty file > sample 0 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	├─1 inlineTag (1:1-1:17)
	├─2 eof (2:1-2:1)
`;

exports[`integration:tokenize > user constructs > non-empty file > sample 1 1`] = `
tokens[13]
	├─0 sof (1:1-1:1)
	├─1 punctuator (1:10-1:11)
	├─2 string (1:12-1:21)
	├─3 punctuator (1:21-1:22)
	├─4 punctuator (2:8-2:9)
	├─5 punctuator (2:12-2:13)
	├─6 punctuator (2:13-2:14)
	├─7 punctuator (2:19-2:20)
	├─8 punctuator (2:25-2:26)
	├─9 punctuator (2:26-2:27)
	├─10 punctuator (2:28-2:29)
	├─11 punctuator (2:29-2:30)
	├─12 eof (3:1-3:1)
`;

exports[`integration:tokenize > user constructs > non-empty file > sample 2 1`] = `
tokens[8]
	├─0 sof (1:1-1:1)
	├─1 string (1:1-1:4)
	├─2 string (2:1-2:4)
	├─3 punctuator (3:1-3:2)
	├─4 punctuator (3:2-3:3)
	├─5 punctuator (3:4-3:5)
	├─6 punctuator (3:5-3:6)
	├─7 eof (4:1-4:1)
`;

exports[`integration:tokenize > user constructs > non-empty file > sample 3 1`] = `
tokens[42]
	├─0 sof (1:1-1:1)
	├─1 number (1:1-1:2)
	├─2 whitespace (1:2-2:1)
	├─3 bigint (2:1-2:3)
	├─4 whitespace (2:3-3:1)
	├─5 number (3:1-3:2)
	├─6 whitespace (3:2-4:1)
	├─7 bigint (4:1-4:3)
	├─8 whitespace (4:3-5:1)
	├─9 number (5:1-5:2)
	├─10 whitespace (5:2-6:1)
	├─11 bigint (6:1-6:3)
	├─12 whitespace (6:3-7:1)
	├─13 number (7:1-7:2)
	├─14 whitespace (7:2-8:1)
	├─15 bigint (8:1-8:3)
	├─16 whitespace (8:3-9:1)
	├─17 number (9:1-9:2)
	├─18 whitespace (9:2-10:1)
	├─19 bigint (10:1-10:3)
	├─20 whitespace (10:3-11:1)
	├─21 number (11:1-11:2)
	├─22 whitespace (11:2-12:1)
	├─23 bigint (12:1-12:3)
	├─24 whitespace (12:3-13:1)
	├─25 number (13:1-13:2)
	├─26 whitespace (13:2-14:1)
	├─27 bigint (14:1-14:3)
	├─28 whitespace (14:3-15:1)
	├─29 number (15:1-15:2)
	├─30 whitespace (15:2-16:1)
	├─31 bigint (16:1-16:3)
	├─32 whitespace (16:3-17:1)
	├─33 number (17:1-17:2)
	├─34 whitespace (17:2-18:1)
	├─35 bigint (18:1-18:3)
	├─36 whitespace (18:3-19:1)
	├─37 number (19:1-19:2)
	├─38 whitespace (19:2-20:1)
	├─39 bigint (20:1-20:3)
	├─40 whitespace (20:3-21:1)
	├─41 eof (21:1-21:1)
`;

exports[`integration:tokenize > user constructs > should tokenize empty file 1`] = `
tokens[2]
	├─0 sof (1:1-1:1)
	├─1 eof (1:1-1:1)
`;
